--- a/css/style.css
+++ b/css/style.css
@@ -1094,7 +1094,8 @@ a:active {
     flex: 0 0 auto;
     max-width: 300px;
     text-align: center;
-    margin-top: 120px;
+    margin-top: 0;
+    align-self: flex-start;
 }
 
 .new-moon-img {
