--- a/css/style.css
+++ b/css/style.css
@@ -1213,7 +1213,7 @@ a:active {
     font-weight: bold;
     font-size: 0.9rem;
     line-height: 1.3;
-    color: #0dec36;
+    color: #16f63f;
 }
 
 /* Mobile optimizations for door pages */
