--- a/css/style.css
+++ b/css/style.css
@@ -821,14 +821,14 @@ footer p {
     z-index: 1000;
     animation: floatCandles 8s ease-in-out infinite;
     opacity: 0.6;
-    text-shadow: 0 0 10px rgba(11, 156, 30, 0.8);
-    filter: drop-shadow(0 0 5px rgba(255, 165, 0, 0.5));
+    text-shadow: 0 0 10px rgba(51, 37, 239, 0.8);
+    filter: drop-shadow(0 0 5px rgba(55, 0, 255, 0.5));
 }
 
 /* Candle drop styling */
 .particle-candle.candle-drop {
-    color: #ffa500;
-    filter: drop-shadow(0 0 5px rgba(30, 201, 7, 0.7));
+    color: #2549fc;
+    filter: drop-shadow(0 0 5px rgba(83, 12, 247, 0.7));
 }
 
 @keyframes floatCandles {
@@ -1364,6 +1364,10 @@ a:active {
     color: #c30b0b !important;
 }
 
+.blue-link {
+    color: #1e91e2 !important;
+}
+
 .door-content {
     max-width: 1400px;
     background: rgba(0, 0, 0, 0.7);
@@ -1551,6 +1555,7 @@ a:active {
     margin: 20px auto;
     padding: 0 0 0 40px;
     list-style: decimal;
+    font-style: bold;
 }
 
 .movie-list li {
@@ -1603,6 +1608,7 @@ a:active {
         padding: 15px;
         font-size: 1rem;
         line-height: 1.6;
+        font-style: bold;
     }
     
     .text-with-image {
